--- a/register.html
+++ b/register.html
@@ -1,15 +1,25 @@
+
 <html>
     <head>
-        <title>Sign Up</title>        
+        <title>Sign Up</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="main.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <form action="register.php" method="POST">
+        <div class="jumbotron text-center">
+        </div>
+        <form class="col-md-4 col-md-offset-4" action="register.php" method="POST">
+            <h1>Sign up for an account:</h1>
             <label>Name:</label>
             <input type="text" name="name"></br>
             <label>Username:</label>
             <input type="text" name="username"></br>
             <label>Password:</label>
-            <input type="text" name="password"></br>
+            <input type="password" name="password"></br>
             <label>Address:</label>
             <input type="text" name="address"></br>
             <label>State:</label>
