--- a/login.html
+++ b/login.html
@@ -1,14 +1,24 @@
 <html>
     <head>
-        <title>Login</title>        
+        <title>Login</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="main.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
-        <form action="login.php" method="POST">
+        <div class="jumbotron text-center">
+        </div>
+        <form align="center" class="col-md-4 col-md-offset-4" action="login.php" method="POST">
+            <h1>Account Sign in:</h1>
             <label>Username:</label>
             <input type="text" name="username"></br>
             <label>Password:</label>
             <input type="text" name="password"></br>
-            <input type="submit" text="submit">
+            <input type="submit" text="submit"></br>
+            <a href="register.html">Create an Account</a>
         </form>
     </body>
 </html>
