--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
     <body>
         <div class="jumbotron text-center">
         </div>
-        <form class="col-md-4 col-md-offset-4" action="register.php" method="POST">
+        <form align="center" class="col-md-4 col-md-offset-4" action="register.php" method="POST">
             <h1>Sign up for an account:</h1>
             <label>Name:</label>
             <input type="text" name="name"></br>
@@ -25,7 +25,7 @@
             <label>State:</label>
             <input type="text" name="state"></br>
             <label>Zip:</label>
-            <input type="text" name="zip"></br>
+            <input type="number" name="zip"></br>
             <input type="submit" text="submit">
         </form>
     </body>
