--- a/register.html
+++ b/register.html
@@ -26,6 +26,8 @@
             <input type="text" name="state"></br>
             <label>Zip:</label>
             <input type="number" name="zip"></br>
+            <label>Card Number:</label>
+            <input type="number" name="cardnumber"></br>
             <input type="submit" text="submit">
         </form>
     </body>
