--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
             <label>Username:</label>
             <input type="text" name="username"></br>
             <label>Password:</label>
-            <input type="text" name="password"></br>
+            <input type="password" name="password"></br>
             <input type="submit" text="submit"></br>
             <a href="register.html">Create an Account</a>
         </form>
