--- a/index.html
+++ b/index.html
@@ -8,10 +8,34 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         <script>
-            function decodeHtml(html) {
-                var txt = document.createElement("textarea");
-                txt.innerHTML = html;
-                return txt.value;
+            var cart=[];
+            function addToCart(sku){
+                console.log(sku);
+                let exists = false;
+                for(let i = 0;i<cart.length;i++){
+                    if(cart[i].sku == sku){
+                        cart[i].number+=1;
+                        exists = true;
+                    }
+                }
+                if(!exists){
+                    cart.push({sku:sku,number:1})
+                }
+                document.cookie="cart="+JSON.stringify(cart);
+                setCart();
+            }
+            function setCart(){
+                count = 0;
+                for(let i = 0;i<cart.length;i++){
+                    count+=cart[i].number;
+                }
+                if(count==0)
+                {
+                    $("#cart").html("Cart");
+                }
+                else{
+                    $("#cart").html("Cart - "+count);
+                }
             }
             //code to run at the load of the html file.
             $(function() {
@@ -21,7 +45,7 @@
                     let d = JSON.parse(data.split("<script>")[0]);
                     let h = "<div class=\"row\">";
                     for(let i =0;i<d.length;i++){
-                        h+="<div class=\"col-sm-4\"><img class=\"preview\" src=\""+d[i].Picture+"\"><br><h3>"+d[i].Name+" - $"+d[i].Price+"</h3></br><button class=\"btn btn-secondary btn-lg btn-block\">Add to Cart</button></div>"
+                        h+="<div class=\"col-sm-4\"><img class=\"preview\" src=\""+d[i].Picture+"\"><br><h3>"+d[i].Name+" - $"+d[i].Price+"</h3></br><button onclick=\"addToCart('"+d[i].SKU+"')\" class=\"btn btn-secondary btn-lg btn-block\">Add to Cart</button></div>"
                         if( (i+1)%3==0){
                             h+="</div> <div class=\"row\">";
                         }
@@ -34,8 +58,7 @@
                 let cookieArray = document.cookie.split(";");
                 for(let i = 0;i<cookieArray.length;i++){
                     let s = cookieArray[i].split("=");
-                    if (s[0]=="user"){
-                        console.log(s[1]);
+                    if (s[0].trim()=="user"){
                         if(s[1]!=""){
                             let info = JSON.parse(unescape(s[1]).replace(/&quot;/g,"\""));
                             $("#name").html("<p>Welcome, "+info.Name+"</p>");
@@ -43,7 +66,14 @@
                             $("#login").attr("href","logout.php");
                         }
                     }
+                    if(s[0].trim()=="cart"){
+                        if(s[1].trim()!=""){
+                            console.log("t");
+                            cart = JSON.parse(unescape(s[1]).replace(/&quot;/g,"\""));
+                        }
+                    }
                 }
+                setCart();
             });
         </script>
     </head>
@@ -55,7 +85,7 @@
             <ul class="nav navbar-nav">
               <li><a href="#">Home</a></li>
               <li><a id="login" href="login.html">Sign In</a></li>
-              <li><a href="#">Cart</a></li>
+              <li><a id="cart" href="#">Cart</a></li>
             </ul>
         </nav>
         <div id="list">
