--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
                 setCart();
             }
             function setCart(){
-                count = 0;
-                for(let i = 0;i<cart.length;i++){
-                    count+=cart[i].number;
-                }
+                count = cart.length;
                 if(count==0)
                 {
                     $("#cart").html("Cart");
