--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
             <input type="text" name="username"></br>
             <label>Password:</label>
             <input type="password" name="password"></br>
-            <input type="submit" text="submit"></br>
+            <input type="submit" value="submit"></br>
             <a href="register.html">Create an Account</a>
         </form>
     </body>
